--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.2",
-    "wrangler": "^3.60.3",
-    "vitest": "2.0.5"
+    "vitest": "2.0.5",
+    "wrangler": "^3.60.3"
+  },
+  "dependencies": {
+    "linkedom": "^0.18.5",
+    "mimetext": "^3.0.24",
+    "postal-mime": "^2.3.2"
   }
 }
