--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.5.2",
-    "vitest": "2.0.5",
-    "wrangler": "^3.60.3"
+    "@types/node": "^22.14.0",
+    "wrangler": "^4.7.2"
   },
   "dependencies": {
-    "linkedom": "^0.18.5",
-    "mimetext": "^3.0.24",
-    "postal-mime": "^2.3.2"
+    "linkedom": "^0.18.9",
+    "mimetext": "^3.0.27",
+    "postal-mime": "^2.4.3"
   }
 }
